--- a/wz95_geolocator/pubspec.yaml
+++ b/wz95_geolocator/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   awesome_dialog: ^3.0.2
   geolocator: ^9.0.2
+  geocoding: ^2.0.5
+  google_maps: ^6.2.0
+  google_maps_flutter: ^2.2.1
+  google_maps_flutter_web: ^0.4.0+3
 
 dev_dependencies:
   flutter_test:
