--- a/wz95_geolocator/android/app/src/main/AndroidManifest.xml
+++ b/wz95_geolocator/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
    <application
         android:label="wz95_geolocator"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <!-- for google maps -->
         <meta-data 
             android:name="com.google.android.geo.API_KEY"
