--- a/wz95_geolocator/pubspec.yaml
+++ b/wz95_geolocator/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_maps: ^6.2.0
   google_maps_flutter: ^2.2.1
   google_maps_flutter_web: ^0.4.0+3
+  flutter_launcher_icons: ^0.10.0
 
 dev_dependencies:
   flutter_test:
@@ -66,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
